--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="title_create">Create</string>
     <string name="add_drink">Add Drink</string>
     <string name="hint_word">Drink...</string>
+    <string name="name_hint">Drink Name...</string>
+    <string name="tag_hint">Drink Tag...</string>
     <string name="button_save">Save</string>
+    <string name="button_search">Search</string>
     <string name="empty_not_saved">Drink not saved because it is empty.</string>
     <string name="title_activity_new_drink">NewDrinkActivity</string>
     <!--
