--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="tag_label">Drink Tags</string>
     <string name="category_label">Drink Category</string>
     <string name="cocktail_map">Cocktail Map</string>
+    <string name="heart_image">Heart Image</string>
 </resources>
