--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="button_update">Update</string>
     <string name="button_exitWithoutSaving">Exit Without Saving</string>
     <string name="button_search">Search</string>
-    <string name="empty_not_saved">Drink not saved because it is empty.</string>
+    <string name="empty_not_saved">Drink not saved.</string>
     <string name="title_activity_new_drink">NewDrinkActivity</string>
     <!--
     This string is used for square devices and overridden by hello_world in
