--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_home">Home</string>
     <string name="title_favourites">Favourites</string>
     <string name="title_recipes">Recipes</string>
-    <string name="title_timer">Timer</string>
+    <string name="title_shopping">Shopping</string>
     <string name="title_create">Create</string>
     <string name="add_drink">Add Drink</string>
     <string name="generic_hint"><i>None</i></string>
